Fix gap in header causing rest of page to show through

--- a/css/site-custom/stylesheet.scss
+++ b/css/site-custom/stylesheet.scss
@@ -266,8 +266,6 @@ footer {
   }
 
   nav {
-
-
     :not(:last-child) { // Prevent double borders
       border-right: 0;
     }
@@ -279,7 +277,7 @@ footer {
       font-size: 1.625rem;
       line-height: 1.285rem;
       margin: auto;
-      padding: 4px 24px;
+      padding: 7px 24px;
       text-align: center;
       text-decoration: none;
       text-justify: inter-word;
